<resources>
    <string name="delete_main_user">Видалення Вас як власника призведе до видалення компанії та її співробітників.Ви можете виконати передачу права власності іншому співробітникові:</string>
    <string name="employee_deleted">Збережений логін співробітника \n більше недійсний.\nБажаєте здійснити вхід з іншим логіном або до іншої компанії?</string>
    <string name="company_deleted">Компанію зі збереженим Email було видалено або змінено дані для входу.\n Вийдіть з додатку або увійдіть повторно:</string>
    <string name="prob_scanner">Помилка входу, сканер відбитків не знайдено, або відбиток пальця не зареестровано</string>
    <string name="non_connected">Невдале підключення до бази даних.\nПовторіть спробу або вийдіть:</string>
    <string name="position_delete">Ви дійсно впевнені що хочете видалити дану товарну позицію?</string>
    <string name="delete_user">Ви дійсно впевнені що хочете видалити даного співробітника?</string>
    <string name="confirm_cancel_reg">Ви дійсно хочете згорнути процес реестрації?</string>
    <string name="confirmation_exit">Ви дійсно хочете здійснити вихід з аккаунту</string>
    <string name="output_list_empty">Список відправлень до видачі порожній</string>
    <string name="checking_list_empty">Список товарів для обліку порожній</string>
    <string name="prob_passport_renew">Помилка входу, пароль було змінено</string>
    <string name="order_packing_continue">Складання замовлення завершено</string>
    <string name="print_doc_about_input">Друк документів про надходження</string>
    <string name="checking_list_error">Виникла помилка створення запису</string>
    <string name="input_list_empty">Список товарів надходження порожній</string>
    <string name="order_list_empty">Список товарів замовлення порожній</string>
    <string name="position_del_err">Помилка видалення товарної позиції</string>
    <string name="non_format_login">Login не відповідає формату Email</string>
    <string name="non_current_login">Неправильний логін співробітника</string>
    <string name="prob_scanned">Помилка розпізнавання відбитку пальця</string>
    <string name="pol_is_incorect">* Деякі поля заповнено некоректно </string>
    <string name="ch_not_search">Дані про проведення обліку відсутні</string>
    <string name="input_doc_print">Виникла помилка створення запису</string>
    <string name="output_not_search">Дані про відправлення відсутні</string>
    <string name="employee_del_err">Помилка видалення співробітника</string>
    <string name="input_list_end">Оформлення надходження завершено</string>
    <string name="packing_not_search">Дані про замовлення відсутні</string>
    <string name="pol_is_using">* Деякі дані вже використовуються </string>
    <string name="task_addition_complite">Надходження опрацьовано</string>
    <string name="non_reg_email">Email не зареестровано в системі</string>
    <string name="input_not_search">Дані про надходження відсутні</string>
    <string name="output_doc_print">Друк видаткової документації</string>
    <string name="not_have_task">Вам ще не було доручено завдань</string>
    <string name="pos_name_sample">АКБ Baseus Qpow 20000mAh 15W</string>
    <string name="non_format_email">Email не відповідає формату</string>
    <string name="database_err">Помилка взаємодії з базою даних</string>
    <string name="num_input_performed">Опрацьовано надходження</string>
    <string name="tasktime_text">Час доручення / на виконання:</string>
    <string name="position_list_empty">Список товарів порожній</string>
    <string name="inc_login">Логін не відповідає формату Email</string>
    <string name="output_list_end">Видачу замовлень завершено</string>
    <string name="ttl_regCompany">Заповнення профілю компанії</string>
    <string name="ttl_scanned_barcode">Відскановано штрихкод:</string>
    <string name="company_del_err">Помилка видалення компанії</string>
    <string name="checking_list_end">Облік товарів завершено</string>
    <string name="ttl_refactor_position">Редагування позиції</string>
    <string name="task_type1">Опрацювати надхождення товарів</string>
    <string name="position_search_empty">Товарів не знайдено</string>
    <string name="ttn_print_title">Друк ТТН для замовлення: </string>
    <string name="camera_error">Доступ до камери не отримано</string>
    <string name="start_perform_time">Час початку виконання</string>
    <string name="position_emp_samle2">Менеджер з закупівлі</string>
    <string name="non_current_password">Неправильний пароль</string>
    <string name="pol_sql_error">* Помилка виконання запиту</string>
    <string name="add_full_acess">Надати розширений доступ</string>
    <string name="employee_del_suc">Співробітника видалено</string>
    <string name="ttl_complyte_order">Оброблено замовлень</string>
    <string name="order_out_performed">Видано відправлень</string>
    <string name="comp_employee">Виконано співробітником:</string>
    <string name="ttl_btn_task_deleted">Завдання видалено</string>
    <string name="btn_reg">Зареєструвати власну компанію</string>
    <string name="btn_continueReg">Продовжити реєстрацію</string>
    <string name="confirm_user_add">Додати співробітника</string>
    <string name="ttl_comment">Коментар (не обов’язково)</string>
    <string name="all_count">Загальна кількість товарів:</string>
    <string name="count_shipping">Кількість відправлень:</string>
    <string name="input_state_2">Надходження опрацьовано</string>
    <string name="ttl_btn_delete_task">Видалити завдання</string>
    <string name="ttl_btn_close_task">Завершити перегляд</string>
    <string name="used_phone">Номер вже використовується</string>
    <string name="used_login">Email вже використовується</string>
    <string name="ttl_usersList">Перелік співробітників</string>
    <string name="ttl_regUser">Реестрація співробітника</string>
    <string name="ttl_createPosition">Створення позиції</string>
    <string name="inc_phone">Некоректний номер телефону</string>
    <string name="ttl_logFirst">Увійти як співробітник</string>
    <string name="ttl_taskmanager">Делегування завдань</string>
    <string name="ttl_ingoing_orders">Опрацьовано надходжень</string>
    <string name="ttl_task_complyte">Виконано доручень</string>
    <string name="task_perform_time">Термін виконання:</string>
    <string name="old_new_phone">Старий номер телефону</string>
    <string name="employee_added">Співробітника додано</string>
    <string name="scanning_not">Сканування не виконано</string>
    <string name="btn_complite_work">Завершити роботу</string>
    <string name="ttl_outgoing_orders">Видано товарів</string>
    <string name="set_newphone">Зміна номеру телефону</string>
    <string name="input_order_pr">Надходження товарів</string>
    <string name="perform_time">Час на виконання (хв)</string>
    <string name="ttl_add_info">Опис (не обов’язково)</string>
    <string name="task_manager">Постановник завдання:</string>
    <string name="ttl_new_phone">Новий номер телефону</string>
    <string name="output_state_2">Відправлення опрацьовано</string>
    <string name="btn_create_task">Доручити завдання</string>
    <string name="ttl_performorder">Збірка замовлень</string>
    <string name="outp_complite">Відправлення видано</string>
    <string name="count_position">Кількість товарів:</string>
    <string name="ttl_short_anal">Зведені відомості</string>
    <string name="set_version">Version: 1.0.37 (93)</string>
    <string name="btn_stop_view">Завершити перегляд</string>
    <string name="goto_work">(Перейти до виконання)</string>
    <string name="ttn_print_code">Привласнено код: </string>
    <string name="database_err2">Помилка бази даних</string>
    <string name="position_renew">Позицію оновлено</string>
    <string name="ttl_ordersList">Список замовлень</string>
    <string name="ttl_inputList">Список надходжень</string>
    <string name="ttl_userdata">Дані співробітника</string>
    <string name="output_order_pr">Видаток товарів</string>
    <string name="inpt_positions">Отримано товарів</string>
    <string name="pib_employee">ПІБ співробітника:</string>
    <string name="position_emp_sample">Пакувальник</string>
    <string name="ttl_btn_added">Завдання доручено</string>
    <string name="ttl_outputList">Список видатків</string>
    <string name="btn_addposition">Додати позицію</string>
    <string name="enter_count">Введена кількість:</string>
    <string name="complite_state">Облік завершено</string>
    <string name="ttl_input">Надходження товарів</string>
    <string name="ttl_tableList">Таблиця товарів</string>
    <string name="create_task">Створити завдання</string>
    <string name="ttl_order_receiver">Отримувач:</string>
    <string name="receiver_sample">Ахленко Д. А.</string>
    <string name="employee_sample">Ахленко Д. А.</string>
    <string name="created_ttn">Привласнений ТТН:</string>
    <string name="position_added">Позицію додано</string>
    <string name="used_pass">Неправильний пароль</string>
    <string name="ttl_output">Видаток замовлень</string>
    <string name="btn_start_work">Почати роботу</string>
    <string name="ttl_taskList">Список доручень</string>
    <string name="about_employee">Cпівробітник:</string>
    <string name="set_newpassword">Зміна паролю</string>
    <string name="btn_confirm_scan">Підтвердити</string>
    <string name="ttl_order_numb">№ Замовлення:</string>
    <string name="pib_performer">ПІБ виконавця:</string>
    <string name="work_place_emp">Робоче місце:</string>
    <string name="packing_state_0">Не оброблено</string>
    <string name="packing_state_1">Обробляється</string>
    <string name="workDaysTitle">Графік роботи</string>
    <string name="ttl_zbirka">Збірка замовлень</string>
    <string name="anal_about">Статистика щодо:</string>
    <string name="privace_sample">Запит паролю</string>
    <string name="dialog_oldText">Старий текст</string>
    <string name="dialog_massage">Повідомлення</string>
    <string name="prob_biom">Помилка біометрії</string>
    <string name="time_points_before">хв. тому</string>
    <string name="confirmation">Підтвердження:</string>
    <string name="ttl_newr_phone">Зміна номеру</string>
    <string name="ttl_newr_login">Зміна логіну</string>
    <string name="inc_pass">Некоректний пароль</string>
    <string name="ttl_table">Таблиця\nтоварів</string>
    <string name="dialog_newTExt">Новий текст</string>
    <string name="ttl_workplace">Робоче місце</string>
    <string name="orderNumberSample">00542560</string>
    <string name="comp_data">Дата проведення:</string>
    <string name="prep_state">Стан виконання:</string>
    <string name="data_sample_big">14.05.2023</string>
    <string name="pac_size">Розмір пакування:</string>
    <string name="ttl_newr_pass">Зміна паролю</string>
    <string name="old_new_pass">Старий пароль</string>
    <string name="old_new_login">Старий Email</string>
    <string name="ch_state_3">Облік завершено</string>
    <string name="ttl_settings">Налаштування</string>
    <string name="set_newlogin">Зміна логіну</string>
    <string name="set_exit">Вихід з аккаунта</string>
    <string name="phone_sample">093-554-7878</string>
    <string name="orderNumber">№ Замовлення:</string>
    <string name="ttl_producer">Постачальник</string>
    <string name="pos_count">Початкова к-сть</string>
    <string name="ttn_sample">00532563456757</string>
    <string name="not_complite">Не оброблено</string>
    <string name="time_samole7">5 хв. тому</string>
    <string name="pos_code_sample">948139</string>
    <string name="size_sample">10х15х8 см</string>
    <string name="work_place_emp_s">Склад</string>
    <string name="pos_name">Найменування</string>
    <string name="pos_code3">Код товару:</string>
    <string name="position_emp">Посада:</string>
    <string name="time_sample6">60 (хв)</string>
    <string name="count_sample5">150</string>
    <string name="weight_cer">Вага:</string>
    <string name="weight">Вага</string>
</resources>