<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="85dp"
    android:background="@color/back_white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.76" />

    <ImageButton
        android:id="@+id/button_taskselect"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/back_white"
        android:onClick="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_receivetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/task_type1"
        android:textAlignment="textStart"
        android:textColor="@color/fonts_color_blc"
        app:layout_constraintBottom_toTopOf="@+id/line_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/line_1" />

    <TextView
        android:id="@+id/view_receivetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/time_samole7"
        android:textAlignment="textEnd"
        android:textColor="#99040000"
        app:layout_constraintBottom_toTopOf="@+id/line_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/line_1" />

    <TextView
        android:id="@+id/title_adresser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/task_manager"
        android:textColor="#B3000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/line_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/line_2" />

    <TextView
        android:id="@+id/view_adresser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/position_emp_samle2"
        android:textAlignment="textEnd"
        android:textColor="#B3000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/line_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/line_2" />

    <TextView
        android:id="@+id/title_complittime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/task_perform_time"
        android:textColor="#B3000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/line_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/line_3" />

    <TextView
        android:id="@+id/view_complitetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="@string/time_sample6"
        android:textAlignment="textEnd"
        android:textColor="#B3000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/line_3"
        app:layout_constraintEnd_toEndOf="@+id/view_adresser"
        app:layout_constraintTop_toTopOf="@+id/line_3" />

    <TextView
        android:id="@+id/title_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/goto_work"
        android:textAlignment="center"
        android:textColor="#B3000000"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/border_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/line_black" />
</androidx.constraintlayout.widget.ConstraintLayout>