<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/BorderLayout"
    android:layout_width="match_parent"
    android:layout_height="85dp"
    android:background="@color/back_white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <ImageButton
        android:id="@+id/button_userselect"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="@color/back_white"
        android:onClick="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="25dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/line_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ico_pack" />

    <ImageView
        android:id="@+id/activity_indicator"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/line_right"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ellipse_green" />

    <TextView
        android:id="@+id/title_workername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="@string/pib_employee"
        android:textAlignment="viewStart"
        android:textColor="@color/fonts_color_blc"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/title_workstate"
        app:layout_constraintStart_toStartOf="@+id/line_left"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/view_workername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="@string/employee_sample"
        android:textAlignment="viewEnd"
        android:textColor="@color/fonts_color_blc"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view_workstate"
        app:layout_constraintEnd_toStartOf="@+id/line_right"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_workstate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="@string/position_emp"
        android:textAlignment="viewStart"
        android:textColor="@color/fonts_color_blc"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/line_left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.492" />

    <TextView
        android:id="@+id/view_workstate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="@string/position_emp_sample"
        android:textAlignment="textEnd"
        android:textColor="@color/fonts_color_blc"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/line_right"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_wplace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="@string/work_place_emp"
        android:textAlignment="viewStart"
        android:textColor="@color/fonts_color_blc"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/border_bottom"
        app:layout_constraintStart_toStartOf="@+id/title_workstate"
        app:layout_constraintTop_toBottomOf="@+id/title_workstate" />

    <TextView
        android:id="@+id/view_wplace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="@string/work_place_emp_s"
        android:textAlignment="viewEnd"
        android:textColor="@color/fonts_color_blc"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/line_right"
        app:layout_constraintTop_toBottomOf="@+id/view_workstate" />

    <ImageView
        android:id="@+id/border_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/line_black" />

</androidx.constraintlayout.widget.ConstraintLayout>